@@ -4,8 +4,7 @@ import static com.google.common.base.Preconditions.checkArgument;
 
 import java.io.File;
 import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLEncoder;
 import java.util.concurrent.TimeUnit;
 
@@ -14,6 +13,7 @@ import com.crawljax.core.Crawler;
 import com.crawljax.core.CrawljaxException;
 import com.crawljax.core.configuration.CrawlRules.CrawlRulesBuilder;
 import com.crawljax.core.plugin.Plugin;
+import com.crawljax.core.state.StateVertexFactory;
 import com.google.common.base.Objects;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
@@ -29,7 +29,7 @@ public class CrawljaxConfiguration {
 		private final CrawljaxConfiguration config;
 		private final CrawlRulesBuilder crawlRules;
 
-		private CrawljaxConfigurationBuilder(URL url) {
+		private CrawljaxConfigurationBuilder(URI url) {
 			Preconditions.checkNotNull(url);
 			config = new CrawljaxConfiguration();
 			config.url = url;
@@ -40,36 +40,32 @@ public class CrawljaxConfiguration {
 		 * If the website uses <a
 		 * href="http://en.wikipedia.org/wiki/Basic_access_authentication">Basic auth</a> you can
 		 * set the username and password here.
-		 * 
-		 * @param username
-		 *            The username for the website.
-		 * @param password
-		 *            The password for the website.
+		 *
+		 * @param username The username for the website.
+		 * @param password The password for the website.
 		 * @return {@link CrawljaxConfigurationBuilder} for method chaining.
 		 */
 		public CrawljaxConfigurationBuilder setBasicAuth(String username, String password) {
 			try {
 				String encodedUsername = URLEncoder.encode(username, "UTF-8");
 				String encodedPassword = URLEncoder.encode(password, "UTF-8");
-				config.url =
-				        new URL(config.url.getProtocol()
-				                + "://" + encodedUsername
-				                + ":" + encodedPassword + "@" + config.url.getAuthority()
-				                + config.url.getPath());
-				System.out.println("URL " + config.url);
-			} catch (UnsupportedEncodingException | MalformedURLException e) {
+				config.url = URI.create(config.url.getScheme()
+				  + "://" + encodedUsername
+				  + ":" + encodedPassword + "@" + config.url.getAuthority()
+				  + config.url.getPath());
+			}
+			catch (UnsupportedEncodingException e) {
 				throw new CrawljaxException("Could not parse the username/password to a URL", e);
 			}
 			return this;
 		}
 
 		/**
-		 * @param states
-		 *            The maximum number of states the Crawler should crawl. The default is
-		 *            unlimited.
+		 * @param states The maximum number of states the Crawler should crawl. The default is
+		 *               unlimited.
 		 */
 		public CrawljaxConfigurationBuilder setMaximumStates(int states) {
-			checkArgument(states > 1, "Number of maximum states should be largen than 1");
+			checkArgument(states > 1, "Number of maximum states should be larger than 1");
 			config.maximumStates = states;
 			return this;
 		}
@@ -83,8 +79,7 @@ public class CrawljaxConfiguration {
 		}
 
 		/**
-		 * @param time
-		 *            The maximum time the crawler should run. Default is one hour.
+		 * @param time The maximum time the crawler should run. Default is one hour.
 		 */
 		public CrawljaxConfigurationBuilder setMaximumRunTime(long time, TimeUnit unit) {
 			checkArgument(time >= 0, "Time should be larger than 0, or 0 for infinate.");
@@ -101,12 +96,11 @@ public class CrawljaxConfiguration {
 		}
 
 		/**
-		 * @param depth
-		 *            The maximum depth the crawler can reach. The default is <code>2</code>.
+		 * @param depth The maximum depth the crawler can reach. The default is <code>2</code>.
 		 */
 		public CrawljaxConfigurationBuilder setMaximumDepth(int depth) {
 			Preconditions.checkArgument(depth >= 0,
-			        "Depth should be 0 for infinite, or larger for a certain depth.");
+			  "Depth should be 0 for infinite, or larger for a certain depth.");
 			config.maximumDepth = depth;
 			return this;
 		}
@@ -125,9 +119,8 @@ public class CrawljaxConfiguration {
 		 * <p>
 		 * You can call this method several times to add multiple plugins
 		 * </p>
-		 * 
-		 * @param plugins
-		 *            the plugins you would like to enable.
+		 *
+		 * @param plugins the plugins you would like to enable.
 		 */
 		public CrawljaxConfigurationBuilder addPlugin(Plugin... plugins) {
 			pluginBuilder.add(plugins);
@@ -135,8 +128,7 @@ public class CrawljaxConfiguration {
 		}
 
 		/**
-		 * @param configuration
-		 *            The proxy configuration. Default is {@link ProxyConfiguration#noProxy()}
+		 * @param configuration The proxy configuration. Default is {@link ProxyConfiguration#noProxy()}
 		 */
 		public CrawljaxConfigurationBuilder setProxyConfig(ProxyConfiguration configuration) {
 			Preconditions.checkNotNull(configuration);
@@ -152,9 +144,8 @@ public class CrawljaxConfiguration {
 		}
 
 		/**
-		 * @param configuration
-		 *            a custom {@link BrowserConfiguration}. The default is a single
-		 *            {@link BrowserType#FIREFOX} browser.
+		 * @param configuration a custom {@link BrowserConfiguration}. The default is a single
+		 *                      {@link BrowserType#FIREFOX} browser.
 		 */
 		public CrawljaxConfigurationBuilder setBrowserConfig(BrowserConfiguration configuration) {
 			Preconditions.checkNotNull(configuration);
@@ -163,13 +154,27 @@ public class CrawljaxConfiguration {
 		}
 
 		/**
+		 * Set a custom {@link com.crawljax.core.state.StateVertexFactory} to be able to use your own
+		 * {@link com.crawljax.core.state.StateVertex} objects. This is useful when you want to have a custom
+		 * comparator
+		 * in the stateflowgraph which relies on the {@link Object#hashCode()} or {@link Object#equals(Object)} of the
+		 * {@link com.crawljax.core.state.StateVertex}.
+		 *
+		 * @param vertexFactory The factory you want to use.
+		 * @return The builder for method chaining.
+		 */
+		public CrawljaxConfigurationBuilder setStateVertexFactory(StateVertexFactory vertexFactory) {
+			Preconditions.checkNotNull(vertexFactory);
+			config.stateVertexFactory = vertexFactory;
+			return this;
+		}
+
+		/**
 		 * Set the output folder for any {@link Plugin} you might configure. Crawljax itself doesn't
 		 * need an output folder but many plug-ins do.
-		 * 
-		 * @param output
-		 *            The output folder. If it does not exist it will be created.
-		 * @throws IllegalStateException
-		 *             if the specified file is not writable or exists but isn't a folder.
+		 *
+		 * @param output The output folder. If it does not exist it will be created.
+		 * @throws IllegalStateException if the specified file is not writable or exists but isn't a folder.
 		 */
 		public CrawljaxConfigurationBuilder setOutputDirectory(File output) {
 			config.output = output;
@@ -180,12 +185,13 @@ public class CrawljaxConfiguration {
 		private void checkOutputDirWritable() {
 			if (!config.output.exists()) {
 				Preconditions.checkState(config.output.mkdirs(),
-				        "Could not create the output directory %s ", config.output);
-			} else {
+				  "Could not create the output directory %s ", config.output);
+			}
+			else {
 				Preconditions.checkArgument(config.output.isDirectory(),
-				        "Output directory %s is not a folder", config.output);
+				  "Output directory %s is not a folder", config.output);
 				Preconditions.checkState(config.output.canWrite(),
-				        "Output directory %s is not writable", config.output);
+				  "Output directory %s is not writable", config.output);
 			}
 		}
 
@@ -198,29 +204,23 @@ public class CrawljaxConfiguration {
 	}
 
 	/**
-	 * @param url
-	 *            The url you want to setup a configuration for
+	 * @param url The url you want to setup a configuration for
 	 * @return The builder to configure the crawler.
 	 */
-	public static CrawljaxConfigurationBuilder builderFor(URL url) {
+	public static CrawljaxConfigurationBuilder builderFor(URI url) {
 		Preconditions.checkNotNull(url, "URL was null");
 		return new CrawljaxConfigurationBuilder(url);
 	}
 
 	/**
-	 * @param url
-	 *            The url you want to setup a configuration for
+	 * @param url The url you want to setup a configuration for
 	 * @return The builder to configure the crawler.
 	 */
 	public static CrawljaxConfigurationBuilder builderFor(String url) {
-		try {
-			return new CrawljaxConfigurationBuilder(new URL(url));
-		} catch (MalformedURLException e) {
-			throw new CrawljaxException("Could not read that URL", e);
-		}
+		return new CrawljaxConfigurationBuilder(URI.create(url));
 	}
 
-	private URL url;
+	private URI url;
 
 	private BrowserConfiguration browserConfig = new BrowserConfiguration(BrowserType.FIREFOX);
 	private ImmutableList<Plugin> plugins;
@@ -229,14 +229,17 @@ public class CrawljaxConfiguration {
 	private CrawlRules crawlRules;
 
 	private int maximumStates = 0;
-	private long maximumRuntime = TimeUnit.HOURS.toMillis(1);;
+	private long maximumRuntime = TimeUnit.HOURS.toMillis(1);
+	;
 	private int maximumDepth = 2;
 	private File output = new File("out");
+
+	private StateVertexFactory stateVertexFactory;
 
 	private CrawljaxConfiguration() {
 	}
 
-	public URL getUrl() {
+	public URI getUrl() {
 		return url;
 	}
 
@@ -272,10 +275,15 @@ public class CrawljaxConfiguration {
 		return output;
 	}
 
+
+	public StateVertexFactory getStateVertexFactory() {
+		return stateVertexFactory;
+	}
+
 	@Override
 	public int hashCode() {
 		return Objects.hashCode(url, browserConfig, plugins, proxyConfiguration, crawlRules,
-		        maximumStates, maximumRuntime, maximumDepth);
+		  maximumStates, maximumRuntime, maximumDepth);
 	}
 
 	@Override
@@ -283,13 +291,13 @@ public class CrawljaxConfiguration {
 		if (object instanceof CrawljaxConfiguration) {
 			CrawljaxConfiguration that = (CrawljaxConfiguration) object;
 			return Objects.equal(this.url, that.url)
-			        && Objects.equal(this.browserConfig, that.browserConfig)
-			        && Objects.equal(this.plugins, that.plugins)
-			        && Objects.equal(this.proxyConfiguration, that.proxyConfiguration)
-			        && Objects.equal(this.crawlRules, that.crawlRules)
-			        && Objects.equal(this.maximumStates, that.maximumStates)
-			        && Objects.equal(this.maximumRuntime, that.maximumRuntime)
-			        && Objects.equal(this.maximumDepth, that.maximumDepth);
+			  && Objects.equal(this.browserConfig, that.browserConfig)
+			  && Objects.equal(this.plugins, that.plugins)
+			  && Objects.equal(this.proxyConfiguration, that.proxyConfiguration)
+			  && Objects.equal(this.crawlRules, that.crawlRules)
+			  && Objects.equal(this.maximumStates, that.maximumStates)
+			  && Objects.equal(this.maximumRuntime, that.maximumRuntime)
+			  && Objects.equal(this.maximumDepth, that.maximumDepth);
 		}
 		return false;
 	}
@@ -297,15 +305,15 @@ public class CrawljaxConfiguration {
 	@Override
 	public String toString() {
 		return Objects.toStringHelper(this)
-		        .add("url", url)
-		        .add("browserConfig", browserConfig)
-		        .add("plugins", plugins)
-		        .add("proxyConfiguration", proxyConfiguration)
-		        .add("crawlRules", crawlRules)
-		        .add("maximumStates", maximumStates)
-		        .add("maximumRuntime", maximumRuntime)
-		        .add("maximumDepth", maximumDepth)
-		        .toString();
+					  .add("url", url)
+					  .add("browserConfig", browserConfig)
+					  .add("plugins", plugins)
+					  .add("proxyConfiguration", proxyConfiguration)
+					  .add("crawlRules", crawlRules)
+					  .add("maximumStates", maximumStates)
+					  .add("maximumRuntime", maximumRuntime)
+					  .add("maximumDepth", maximumDepth)
+					  .toString();
 	}
 
 }
