@@ -1,6 +1,6 @@
 package com.crawljax.test;
 
-import java.net.URL;
+import java.net.URI;
 
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.server.ServerConnector;
@@ -17,7 +17,7 @@ public class RunWithWebServer extends ExternalResource {
 	private final Resource resource;
 
 	private int port;
-	private URL demoSite;
+	private URI demoSite;
 	private Server server;
 	private boolean started;
 
@@ -34,7 +34,7 @@ public class RunWithWebServer extends ExternalResource {
 		server = newWebServer();
 		server.start();
 		this.port = ((ServerConnector) server.getConnectors()[0]).getLocalPort();
-		this.demoSite = new URL("http", "localhost", port, "/");
+		this.demoSite = URI.create("http://localhost:" + port + "/");
 		this.started = true;
 	}
 
@@ -62,7 +62,7 @@ public class RunWithWebServer extends ExternalResource {
 		}
 	}
 
-	public URL getSiteUrl() {
+	public URI getSiteUrl() {
 		checkServerStarted();
 		return demoSite;
 	}
